src/test/deca/syntax/invalid/invalid_assign.deca
// Resultats :
// Erreur contextuelle
// Ligne 2 : assignation invalide à une expression

5 = x;
